--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <footer>
                 <div class="iconos">
                     <h4>
-                        <font color="blue"> Siguenos en Redes Sociales </font>
+                        <font color="blue"> Siguenos en Redes Sociales!!</font>
                     </h4>
                     <a ref="www.facebook.com" class="facebook">
                         <img src="./assets/facebook.png" alt="logo de la empresa" width="48" height="49">
