--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="../Vidrieria/index.html">Inicio</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="./paginas/nosotros.html">Nosotros</a></li>
                     <li><a href="./paginas/productos.html">Productos</a></li>
                     <li><a href="./paginas/ubicacion.html">Ubicacion</a></li>
