--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -7,7 +7,7 @@
     <!--favicon de la pagina-->
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     <!--CSS-->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <meta name="description" content="Vidrieria Glass-WK villa alemana expertos en soluciones y reparaciones ">
@@ -19,7 +19,7 @@
         </a>
         <nav>
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="ubicacion.html">Ubicacion</a></li>
