--- a/paginas/ubicacion.html
+++ b/paginas/ubicacion.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+     
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidrieria GLASS-WK-Ubicacion</title>
     <!--favicon de la pagina-->
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-    <!--CSS-->
-    <link rel="stylesheet" href="./css/estilos.css">
+   <!--CSS-->
+   <link rel="stylesheet" href="/css/estilos.css">    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <meta name="description" content="Vidrieria Glass-WK villa alemana expertos en soluciones y reparaciones ">
@@ -15,17 +16,18 @@
 <body>
     <header>
         <a ref="#" class="logo">
-            <img src="../assets/logo.png" alt="logo de la empresa">
+            <img src="/assets/logo.png" alt="logo de la empresa">
         </a>
         <nav>
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="ubicacion.html">Ubicacion</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="./paginas/nosotros.html">Nosotros</a></li>
+                <li><a href="./paginas/productos.html">Productos</a></li>
+                <li><a href="./paginas/ubicacion.html">Ubicacion</a></li>
+                <li><a href="./paginas/contacto.html">Contacto</a></li>
             </ul>
         </nav>
+    </header>
         <!--informacion de la pagina-->
         <main>
             <p><h1><b>Ubicacion</b></h1></p>
@@ -57,6 +59,6 @@
 
             </div>
             </footer>
-    </header>
+   
 </body>
 </html>
